# rental-bot

./: .pre-commit-config.yaml  Dockerfile  Makefile  docker-compose.dev.yaml  pyproject.toml
.github/: dependabot.yaml
.github/workflows/: _build_and_publish.yaml  _test.yaml  release.yaml
rental_bot/adapters/bpru/: client.py  di.py  models.py
rental_bot/adapters/database/: __main__.py  config.py  di.py  tables.py  uow.py
rental_bot/adapters/database/migrations/: env.py
rental_bot/adapters/database/migrations/versions/: 2024_12_07_225e4a57dd0b_initial_commit.py
rental_bot/adapters/database/repositories/: advert.py
rental_bot/adapters/telegram/: bot.py  config.py  di.py  sender.py
rental_bot/application/: logging.py  use_case.py
rental_bot/domains/: di.py
rental_bot/domains/entities/: bpru.py
rental_bot/domains/interfaces/: client.py  sender.py
rental_bot/domains/interfaces/repositories/: advert.py
rental_bot/domains/use_cases/: parse_adverts.py
rental_bot/presentors/parser/: __main__.py  bpru.py  config.py  manager.py
tests/: conftest.py  utils.py
tests/adapters/database/: test_migrations.py
tests/adapters/database/repositories/: test_advert.py
tests/plugins/factories/: advert.py  base.py
tests/plugins/instances/: db.py  repositories.py
